[package]
name = "link"
version = "0.1.0"
edition = "2021"
authors = ["Hồ Duy Quốc Bảo <hoduyquocbao@gmail.com>"]
description = "A peer-to-peer networking system"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
bytes = "1.0"
rand = "0.8"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.11"
tempfile = "3.0"
